# gipAndroid

./: .gitignore  CMakeLists.txt  README.md
java/dev/glist/android/: BaseGlistAppActivity.java
java/dev/glist/android/lib/: GlistNative.java  GlistNativeUtil.java
libs/libpng/arm64-v8a/objs/png/: png.o.d  pngerror.o.d  pngget.o.d  pngmem.o.d  pngpread.o.d  pngread.o.d  pngrio.o.d  pngrtran.o.d  pngrutil.o.d  pngset.o.d  pngtest.o.d  pngtrans.o.d  pngwio.o.d  pngwrite.o.d  pngwtran.o.d  pngwutil.o.d
libs/libpng/arm64-v8a/objs/png/arm/: arm_init.o.d  filter_neon.o.d  filter_neon_intrinsics.o.d  palette_neon_intrinsics.o.d
libs/libpng/armeabi-v7a/objs/png/: png.o.d  pngerror.o.d  pngget.o.d  pngmem.o.d  pngpread.o.d  pngread.o.d  pngrio.o.d  pngrtran.o.d  pngrutil.o.d  pngset.o.d  pngtest.o.d  pngtrans.o.d  pngwio.o.d  pngwrite.o.d  pngwtran.o.d  pngwutil.o.d
libs/libpng/armeabi-v7a/objs/png/arm/: arm_init.o.d  filter_neon.o.d  filter_neon_intrinsics.o.d  palette_neon_intrinsics.o.d
libs/libpng/x86/objs/png/: png.o.d  pngpread.o.d  pngrtran.o.d  pngwio.o.d  pngwtran.o.d
libs/libpng/x86/objs/png/arm/: arm_init.o.d  filter_neon_intrinsics.o.d  palette_neon_intrinsics.o.d
libs/libpng/x86_64/objs/png/: pngerror.o.d  pngget.o.d  pngmem.o.d  pngread.o.d  pngrio.o.d  pngrutil.o.d  pngset.o.d  pngtest.o.d  pngtrans.o.d  pngwrite.o.d  pngwutil.o.d
libs/libpng/x86_64/objs/png/arm/: filter_neon.o.d
libs/openssl/arm64-v8a/lib/: libcrypto.so.1.1  libssl.so.1.1
libs/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
libs/openssl/armeabi-v7a/lib/: libcrypto.so.1.1  libssl.so.1.1
libs/openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
libs/openssl/x86/lib/: libcrypto.so.1.1  libssl.so.1.1
libs/openssl/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
libs/openssl/x86_64/lib/: libcrypto.so.1.1  libssl.so.1.1
src/: gAndroidApp.cpp  gAndroidApp.h  gAndroidCanvas.cpp  gAndroidCanvas.h  gAndroidDialog.cpp  gAndroidDialog.h  gAndroidToast.cpp  gAndroidToast.h  gAndroidUtil.cpp  gAndroidUtil.h  gAndroidWindow.cpp  gAndroidWindow.h  gipAndroid.cpp  gipAndroid.h
